<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/fragment_settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp">
        <TextView
                android:text="@string/level_label"
                android:layout_marginBottom="5dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
        <Button
                android:id="@+id/hard_settings_button"
                android:text="@string/hard_label"
                android:layout_margin="10dp"
                android:layout_width="110dp"
                android:layout_height="wrap_content"/>
        <Button
                android:id="@+id/medium_settings_button"
                android:text="@string/medium_label"
                android:layout_margin="10dp"
                android:layout_width="110dp"
                android:layout_height="wrap_content"/>
        <Button
                android:id="@+id/easy_settings_button"
                android:text="@string/easy_label"
                android:layout_margin="10dp"
                android:layout_width="110dp"
                android:layout_height="wrap_content"/>
        <Button
                android:id="@+id/custom_settings_button"
                android:text="@string/custom_label"
                android:layout_margin="10dp"
                android:layout_width="100dp"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
            android:layout_gravity="bottom|start"
            android:layout_margin="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
                android:id="@+id/how_to_play"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/how_to_play"/>
        <TextView
                tools:text="Bombs: 20"
                android:id="@+id/bombs_settings_text_view"
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                tools:text="Field size: 10"
                android:id="@+id/field_settings_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
</FrameLayout>
